# cloudfront-cognito-auth

./: README.md  pyproject.toml  sample_event.json
cloudfront_cognito_auth/: lambda_function.py
